--- a/Ecr/ecr.yaml
+++ b/Ecr/ecr.yaml
@@ -43,7 +43,15 @@ Resources:
               - ecr:InitiateLayerUpload
               - ecr:UploadLayerPart
               - ecr:CompleteLayerUpload
-
+          -
+            Sid: AllowPullOnly
+            Effect: Allow
+            Principal: 
+              AWS: 
+                - Fn::ImportValue: !Sub ${Environment}-Iam-EksWorkerNodeInstanceRoleArn
+            Action: 
+              - ecr:BatchCheckLayerAvailability
+              - ecr:GetDownloadUrlForLayer
       Tags: 
         -
           Key: Name
@@ -79,6 +87,54 @@ Resources:
               - !GetAtt EcrRepository.Arn
       Roles:
         - Fn::ImportValue: !Sub ${Environment}-Iam-DockerDevInstanceRoleName
+  #--------
+  EcrReadListPolicy:
+    Type: AWS::IAM::Policy
+    Properties: 
+      PolicyName: !Sub "${Environment}-EcrReadListPolicy"
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          -
+            Sid: GetRepositories
+            Effect: Allow
+            Action: 
+              - ecr:DescribeRepositories
+            Resource: "*"        
+          - Sid: "AllowEcrReadList"
+            Effect: Allow
+            Action:
+              - ecr:DescribeImages
+              - ecr:ListImages
+            Resource:
+              - !GetAtt EcrRepository.Arn
+      Roles:
+        - Fn::ImportValue: !Sub ${Environment}-Iam-ManagerInstanceRoleName
+  #--------
+  EcrReadOnlyPolicy:
+    Type: AWS::IAM::Policy
+    Properties: 
+      PolicyName: !Sub "${Environment}-EcrReadOnlyPolicy"
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          -
+            # docker一時トークン(12時間有効)取得。GetAuthorizationTokenは、Resource未サポート
+            Sid: GetAuthorizationToken
+            Effect: Allow
+            Action: 
+              - ecr:GetAuthorizationToken
+            Resource: "*"
+          -
+            Sid: AllowPushPull
+            Effect: Allow
+            Action: 
+              - ecr:BatchCheckLayerAvailability
+              - ecr:GetDownloadUrlForLayer
+            Resource:
+              - !GetAtt EcrRepository.Arn
+      Roles:
+        - Fn::ImportValue: !Sub ${Environment}-Iam-EksWorkerNodeInstanceRoleName
   #--------
   EcrDkrEndpoint:
     Type: AWS::EC2::VPCEndpoint
