--- a/Eks/eks.yaml
+++ b/Eks/eks.yaml
@@ -51,9 +51,21 @@ Resources:
               - eks:Describe*
               - eks:List*
             Resource: "*"
+          - Sid: "AllowDescribeEc2"  #設定上必要となるEC2情報を取得するため
+            Effect: Allow
+            Action:
+              - "ec2:Describe*"
+            Resource: "*"
+          - Sid: "AllowControlWorkerNodeEc2Instances"
+            Effect: Allow
+            Action:
+              - "ec2:TerminateInstances"
+            Resource: "*"
+            Condition:
+              StringLike:
+                ec2:ResourceTag/Name: "*EksCluster-Worker-Nodes"
       Roles:
         - Fn::ImportValue: !Sub ${Environment}-Iam-ManagerInstanceRoleName
-
 
 #Outputs:
 #  #---------------- EC2 Instance
