--- a/SgAndVpce/vpce.yaml
+++ b/SgAndVpce/vpce.yaml
@@ -45,19 +45,19 @@ Resources:
   #    SecurityGroupIds: 
   #          - !Ref VPCEndpointSG
   #---For CloudFormation
-  CloudFormationEndpoint:
-    Type: 'AWS::EC2::VPCEndpoint'
-    Properties:
-      VpcId: 
-        Fn::ImportValue: !Sub ${Environment}-VpcFunc-VpcId
-      ServiceName: !Sub com.amazonaws.${AWS::Region}.cloudformation
-      VpcEndpointType: Interface
-      PrivateDnsEnabled: yes
-      SubnetIds:
-        - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet1Id
-        - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet2Id
-      SecurityGroupIds: 
-            - !Ref VPCEndpointSG
+  #CloudFormationEndpoint:
+  #  Type: 'AWS::EC2::VPCEndpoint'
+  #  Properties:
+  #    VpcId: 
+  #      Fn::ImportValue: !Sub ${Environment}-VpcFunc-VpcId
+  #    ServiceName: !Sub com.amazonaws.${AWS::Region}.cloudformation
+  #    VpcEndpointType: Interface
+  #    PrivateDnsEnabled: yes
+  #    SubnetIds:
+  #      - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet1Id
+  #      - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet2Id
+  #    SecurityGroupIds: 
+  #          - !Ref VPCEndpointSG
   #---For System Manager and Session Manager
   SsmEndpoint:
     Type: 'AWS::EC2::VPCEndpoint'
@@ -99,46 +99,46 @@ Resources:
       SecurityGroupIds: 
             - !Ref VPCEndpointSG
   #---For EC2
-  Ec2Endpoint:
-    Type: 'AWS::EC2::VPCEndpoint'
-    Properties:
-      VpcId: 
-        Fn::ImportValue: !Sub ${Environment}-VpcFunc-VpcId
-      ServiceName: !Sub com.amazonaws.${AWS::Region}.ec2
-      VpcEndpointType: Interface
-      PrivateDnsEnabled: yes
-      SubnetIds:
-        - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet1Id
-        - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet2Id
-      SecurityGroupIds: 
-            - !Ref VPCEndpointSG
+  #Ec2Endpoint:
+  #  Type: 'AWS::EC2::VPCEndpoint'
+  #  Properties:
+  #    VpcId: 
+  #      Fn::ImportValue: !Sub ${Environment}-VpcFunc-VpcId
+  #    ServiceName: !Sub com.amazonaws.${AWS::Region}.ec2
+  #    VpcEndpointType: Interface
+  #    PrivateDnsEnabled: yes
+  #    SubnetIds:
+  #      - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet1Id
+  #      - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet2Id
+  #    SecurityGroupIds: 
+  #          - !Ref VPCEndpointSG
   #---For CloudWatch and CloudWatch Logs
-  CloudWatchEndpoint:
-    Type: 'AWS::EC2::VPCEndpoint'
-    Properties:
-      VpcId: 
-        Fn::ImportValue: !Sub ${Environment}-VpcFunc-VpcId
-      ServiceName: !Sub com.amazonaws.${AWS::Region}.events
-      VpcEndpointType: Interface
-      PrivateDnsEnabled: yes
-      SubnetIds:
-        - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet1Id
-        - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet2Id
-      SecurityGroupIds: 
-            - !Ref VPCEndpointSG
-  LogsEndpoint:
-    Type: 'AWS::EC2::VPCEndpoint'
-    Properties:
-      VpcId: 
-        Fn::ImportValue: !Sub ${Environment}-VpcFunc-VpcId
-      ServiceName: !Sub com.amazonaws.${AWS::Region}.logs
-      VpcEndpointType: Interface
-      PrivateDnsEnabled: yes
-      SubnetIds:
-        - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet1Id
-        - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet2Id
-      SecurityGroupIds: 
-            - !Ref VPCEndpointSG
+  #CloudWatchEndpoint:
+  #  Type: 'AWS::EC2::VPCEndpoint'
+  #  Properties:
+  #    VpcId: 
+  #      Fn::ImportValue: !Sub ${Environment}-VpcFunc-VpcId
+  #    ServiceName: !Sub com.amazonaws.${AWS::Region}.events
+  #    VpcEndpointType: Interface
+  #    PrivateDnsEnabled: yes
+  #    SubnetIds:
+  #      - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet1Id
+  #      - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet2Id
+  #    SecurityGroupIds: 
+  #          - !Ref VPCEndpointSG
+  #LogsEndpoint:
+  #  Type: 'AWS::EC2::VPCEndpoint'
+  #  Properties:
+  #    VpcId: 
+  #      Fn::ImportValue: !Sub ${Environment}-VpcFunc-VpcId
+  #    ServiceName: !Sub com.amazonaws.${AWS::Region}.logs
+  #    VpcEndpointType: Interface
+  #    PrivateDnsEnabled: yes
+  #    SubnetIds:
+  #      - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet1Id
+  #      - Fn::ImportValue: !Sub ${Environment}-VpcFunc-PrivateSubnet2Id
+  #    SecurityGroupIds: 
+  #          - !Ref VPCEndpointSG
 Outputs:
   #------------------ Security Group
   VPCEndpointSGId:
