EKS on Fargateの検証準備で気がついた記述ミスを修正

--- a/Instances/docker_dev_instance.yaml
+++ b/Instances/docker_dev_instance.yaml
@@ -72,7 +72,7 @@ Resources:
                 sudo yum install -y docker
                 # add proxy setting
                 sudo mkdir -p /etc/systemd/system/docker.service.d
-                cat > sudo mkdir -p /etc/systemd/system/docker.service.d/http-proxy.conf << EOL
+                cat > /etc/systemd/system/docker.service.d/http-proxy.conf << EOL
                 [Service]
               - "Environment=\"HTTPS_PROXY=http://"
               - Fn::ImportValue: !Sub ${Environment}-Proxy-ProxyInstance1PrivateIp
