--- a/src/vpce.yaml
+++ b/src/vpce.yaml
@@ -25,3 +25,49 @@ Resources:
               - !Sub "arn:aws:s3:::amazonlinux-2-repos-${AWS::Region}/*"
               # For ECR
               - !Sub "arn:aws:s3:::prod-${AWS::Region}-starport-layer-bucket/*"
+  #--
+  #k8s kubeletからEC2エンドポイントアクセスのために必要
+  Ec2Endpoint:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      VpcEndpointType: Interface
+      VpcId:
+        Fn::ImportValue: EksPoc-VPC-VpcId
+      ServiceName: !Sub "com.amazonaws.${AWS::Region}.ec2"
+      PrivateDnsEnabled: yes
+      SubnetIds:
+        - Fn::ImportValue: EksPoc-VPC-PrivateSubnet1Id
+        - Fn::ImportValue: EksPoc-VPC-PrivateSubnet2Id
+      SecurityGroupIds: 
+        - Fn::ImportValue: EksPoc-SG-VpceSGId
+      PolicyDocument:
+        Statement:
+          - 
+            Effect: Allow
+            Principal:
+              AWS:
+                - !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:root" 
+            Action: "ec2:*"
+            Resource: "*"
+  LogsEndpoint:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      VpcEndpointType: Interface
+      VpcId:
+        Fn::ImportValue: EksPoc-VPC-VpcId
+      ServiceName: !Sub "com.amazonaws.${AWS::Region}.logs"
+      PrivateDnsEnabled: yes
+      SubnetIds:
+        - Fn::ImportValue: EksPoc-VPC-PrivateSubnet1Id
+        - Fn::ImportValue: EksPoc-VPC-PrivateSubnet2Id
+      SecurityGroupIds: 
+        - Fn::ImportValue: EksPoc-SG-VpceSGId
+      PolicyDocument:
+        Statement:
+          - 
+            Effect: Allow
+            Principal:
+              AWS:
+                - !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:root" 
+            Action: "logs:*"
+            Resource: "*"
