Autoscaler設定まで完了

--- a/src/Autoscaler/ecr_for_autoscaler.yaml
+++ b/src/Autoscaler/ecr_for_autoscaler.yaml
@@ -6,7 +6,7 @@ Resources:
   EcrRepository:
     Type: AWS::ECR::Repository
     Properties:
-      RepositoryName: "ekspoc-repo"
+      RepositoryName: "autoscaler-repo"
       ImageScanningConfiguration: 
          ScanOnPush: true
       #LifecyclePolicy:
