--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,8 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+#Custome
+cluster_autoscaler_iam_role_trust_policy.json
+httpd-deployment.yaml
+cluster-autoscaler-autodiscover.yaml
