--- a/k8s_define/httpd-deployment.yaml.template
+++ b/k8s_define/httpd-deployment.yaml.template
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: httpd-dep
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: httpd-pod
@@ -19,3 +19,10 @@ spec:
         image: REPO_URL:latest
         ports:
           - containerPort: 80
+        resources:
+          limits:
+            cpu: 200m
+            memory: 200Mi
+          requests:
+            cpu: 200m
+            memory: 200Mi
