--- a/src/sg.yaml
+++ b/src/sg.yaml
@@ -1,4 +1,4 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: "2010-09-09"
 Description: Deploy SecurityGroups
 #----------------------------------------------
 Parameters:
@@ -142,6 +142,14 @@ Resources:
       FromPort: 443
       ToPort: 443
       SourceSecurityGroupId: !Ref BastionSG
+  AllowHttpsToEksAdminSG:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      GroupId: !Ref VpceSG
+      IpProtocol: tcp
+      FromPort: 443
+      ToPort: 443
+      SourceSecurityGroupId: !Ref EksAdminSG
 Outputs:
   #------------------ Security Group
   BastionSGId:
