--- a/src/iam.yaml
+++ b/src/iam.yaml
@@ -115,6 +115,17 @@ Resources:
                   - "eks:Describe*"
                   - "eks:List*"
                 Resource: "*"
+        - PolicyName: OtherServiceReadPermission
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Sid: IAMReadPermission
+                Effect: Allow
+                Action:
+                  - "iam:Describe*"
+                  - "iam:List*"
+                  - "iam:Get*"
+                Resource: "*"
         - PolicyName: ForThisHandsOnCloudFormationReadPermission
           PolicyDocument:
             Version: "2012-10-17"
