--- a/src/eks_iamserviceaccount.yaml
+++ b/src/eks_iamserviceaccount.yaml
@@ -1,6 +1,6 @@
 ---
-AWSTemplateFormatVersion: '2010-09-09'
-Description: 'IAM role for serviceaccount'
+AWSTemplateFormatVersion: "2010-09-09"
+Description: "IAM role for serviceaccount"
 #----------------------------------------------
 Parameters:
   OIDCProviderID:
@@ -13,21 +13,19 @@ Resources:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
-        -
-          Effect: "Allow"
-          Principal:
-            Federated: !Sub "arn:${AWS::Partition}:iam:${AWS::AccountId}:oidc-provider/oidc.eks.${AWS::Region}.amazonaws.com/id/${OIDCProviderID}"
-          Action:
-          - sts:AssumeRoleWithWebIdentity
-          Condition:
-            StringEquals:
-              oidc.eks.ap-southeast-1.amazonaws.com/id/0CB2B67127D4EE37EC3EDCB9078DD171:aud: "sts.amazonaws.com"
-              oidc.eks.ap-southeast-1.amazonaws.com/id/0CB2B67127D4EE37EC3EDCB9078DD171:sub: "system:serviceaccount:kube-system:aws-node"
+          - Effect: "Allow"
+            Principal:
+              Federated: !Sub "arn:${AWS::Partition}:iam:${AWS::AccountId}:oidc-provider/oidc.eks.${AWS::Region}.amazonaws.com/id/${OIDCProviderID}"
+            Action:
+              - sts:AssumeRoleWithWebIdentity
+            Condition:
+              StringEquals:
+                oidc.eks.ap-southeast-1.amazonaws.com/id/0CB2B67127D4EE37EC3EDCB9078DD171:aud: "sts.amazonaws.com"
+                oidc.eks.ap-southeast-1.amazonaws.com/id/0CB2B67127D4EE37EC3EDCB9078DD171:sub: "system:serviceaccount:kube-system:aws-node"
 
       ManagedPolicyArns:
-      - "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
+        - "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
 Outputs:
   Role1:
     Value:
       Fn::GetAtt: "Role1.Arn"
-
