--- a/src/vpc-2az-4subnets.yaml
+++ b/src/vpc-2az-4subnets.yaml
@@ -143,13 +143,11 @@ Parameters:
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
-      -
-        Label:
+      - Label:
           default: "Environment"
         Parameters:
           - EnvironmentName
-      -
-        Label:
+      - Label:
           default: "VPC Configurations"
         Parameters:
           - InternetAccess
@@ -158,16 +156,14 @@ Metadata:
           - VpcCidr
           - DnsSupport
           - DnsHostnames
-      -
-        Label:
+      - Label:
           default: "VPC DHCP Options Configurations"
         Parameters:
           - DhcpOptionsDomainNameServers1
           - DhcpOptionsDomainNameServers2
           - DhcpOptionsNtpServers1
           - DhcpOptionsNtpServers2
-      -
-        Label:
+      - Label:
           default: "Subnets Configurations"
         Parameters:
           - PublicSubnet1Name
@@ -178,18 +174,18 @@ Metadata:
           - PrivateSubnet1Cidr
           - PrivateSubnet2Name
           - PrivateSubnet2Cidr
-      -
-        Label:
+      - Label:
           default: "Private Hosted zone"
         Parameters:
           - VpcInternalDnsNameEnable
           - VpcInternalDnsName
 #----------------------------------------------
 Conditions:
-  CheckInternetAccess: !Equals [ !Ref InternetAccess, true ]
-  CreateNatGWs: !And [ !Equals [ !Ref InternetAccess, true ], !Equals [ !Ref EnableNatGW, true ] ]
-  CheckVpcInternalDnsNameEnable: !Equals [ !Ref VpcInternalDnsNameEnable, true ]
-  CheckEnvironment: !Not [ !Equals [ !Ref EnvironmentName, "" ] ]
+  CheckInternetAccess: !Equals [!Ref InternetAccess, true]
+  CreateNatGWs:
+    !And [!Equals [!Ref InternetAccess, true], !Equals [!Ref EnableNatGW, true]]
+  CheckVpcInternalDnsNameEnable: !Equals [!Ref VpcInternalDnsNameEnable, true]
+  CheckEnvironment: !Not [!Equals [!Ref EnvironmentName, ""]]
 #----------------------------------------------
 Resources:
   #------------------ VPC FlowLog Role
@@ -207,8 +203,7 @@ Resources:
             Action:
               - sts:AssumeRole
       Policies:
-        -
-          PolicyName: "Flowlog"
+        - PolicyName: "Flowlog"
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -289,8 +284,8 @@ Resources:
       CidrBlock: !Ref PublicSubnet1Cidr
       VpcId: !Ref Vpc
       AvailabilityZone: !Select
-      - 0
-      - Fn::GetAZs: !Ref 'AWS::Region'
+        - 0
+        - Fn::GetAZs: !Ref "AWS::Region"
       MapPublicIpOnLaunch:
         Fn::If:
           - CheckInternetAccess
@@ -311,8 +306,8 @@ Resources:
       CidrBlock: !Ref PublicSubnet2Cidr
       VpcId: !Ref Vpc
       AvailabilityZone: !Select
-      - 1
-      - Fn::GetAZs: !Ref 'AWS::Region'
+        - 1
+        - Fn::GetAZs: !Ref "AWS::Region"
       MapPublicIpOnLaunch:
         Fn::If:
           - CheckInternetAccess
@@ -333,8 +328,8 @@ Resources:
       CidrBlock: !Ref PrivateSubnet1Cidr
       VpcId: !Ref Vpc
       AvailabilityZone: !Select
-      - 0
-      - Fn::GetAZs: !Ref 'AWS::Region'
+        - 0
+        - Fn::GetAZs: !Ref "AWS::Region"
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
@@ -351,8 +346,8 @@ Resources:
       CidrBlock: !Ref PrivateSubnet2Cidr
       VpcId: !Ref Vpc
       AvailabilityZone: !Select
-      - 1
-      - Fn::GetAZs: !Ref 'AWS::Region'
+        - 1
+        - Fn::GetAZs: !Ref "AWS::Region"
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
@@ -371,8 +366,8 @@ Resources:
     Properties:
       AllocationId:
         Fn::GetAtt:
-        - EipNatGw1
-        - AllocationId
+          - EipNatGw1
+          - AllocationId
       SubnetId:
         Ref: PublicSubnet1
       Tags:
@@ -397,8 +392,8 @@ Resources:
     Properties:
       AllocationId:
         Fn::GetAtt:
-        - EipNatGw2
-        - AllocationId
+          - EipNatGw2
+          - AllocationId
       SubnetId:
         Ref: PublicSubnet2
       Tags:
@@ -497,7 +492,7 @@ Resources:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PrivateSubnet1
-      RouteTableId: !Ref PrivateSubnet1RouteTable 
+      RouteTableId: !Ref PrivateSubnet1RouteTable
   PrivateSubnet2RouteTableAssociationPrivateSubnet2:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
@@ -526,12 +521,12 @@ Resources:
 Outputs:
   #------------------ VPC
   VpcId:
-    Description:  VPC ID
+    Description: VPC ID
     Value: !Ref Vpc
     Export:
       Name: !Sub "${AWS::StackName}-VpcId"
   VpcCidr:
-    Description:  VPC CIDR
+    Description: VPC CIDR
     Value: !Ref VpcCidr
     Export:
       Name: !Sub "${AWS::StackName}-VpcCidr"
