EKS管理者の権限見直し

--- a/src/iam.yaml
+++ b/src/iam.yaml
@@ -109,11 +109,22 @@ Resources:
                   - ecr:ListImages
                 Resource:
                   - !Sub "arn:${AWS::Partition}:ecr:${AWS::Region}:${AWS::AccountId}:repository/*"
-              - Sid: AllowEksReadPermission
+              - Sid: AllowEksReadWritePermission
                 Effect: Allow
                 Action:
                   - "eks:Describe*"
                   - "eks:List*"
+                  - eks:CreateFargateProfile
+                  - eks:DeleteFargateProfile
+                  - eks:UpdateNodegroupVersion
+                  - eks:UpdateClusterVersion
+                  - eks:DeleteAddon
+                  - eks:AssociateEncryptionConfig
+                  - eks:DeleteNodegroup
+                  - eks:UpdateAddon
+                  - eks:CreateAddon
+                  - eks:UpdateNodegroupConfig
+                  - eks:CreateNodegroup
                 Resource: "*"
         - PolicyName: OtherServiceReadPermission
           PolicyDocument:
